[gd_scene load_steps=48 format=3 uid="uid://b7ayaqb01gc74"]

[ext_resource type="Script" uid="uid://d130yf7pug272" path="res://main.gd" id="1_cegan"]
[ext_resource type="FontFile" uid="uid://u02ecjjgywd3" path="res://assets/fonts/Kenney Thick.ttf" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cka801hk8vkug" path="res://levels/level_base.tscn" id="2_82xsv"]
[ext_resource type="Texture2D" uid="uid://x58l7s6nlu4" path="res://assets/sprites/background.png" id="2_h2yge"]
[ext_resource type="Script" uid="uid://ct2cwym2beknk" path="res://levels/canvas_modulate.gd" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://be0vaebchmdmb" path="res://win_screen.tscn" id="3_getpj"]
[ext_resource type="PackedScene" uid="uid://be7i6held6qex" path="res://level_components/floor_bottom.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://b86ftjng8ek4x" path="res://lose_screen.tscn" id="4_ryguw"]
[ext_resource type="Script" uid="uid://bypvvate53xcl" path="res://player/player.gd" id="5_074og"]
[ext_resource type="PackedScene" uid="uid://3iknvkfi3tv8" path="res://items/projectiles/rock.tscn" id="6_cegan"]
[ext_resource type="PackedScene" uid="uid://cexugch4osbag" path="res://items/projectiles/bullet.tscn" id="7_82xsv"]
[ext_resource type="Texture2D" uid="uid://bpprm2t2q81yw" path="res://assets/sprites/player/player_down.png" id="8_getpj"]
[ext_resource type="Texture2D" uid="uid://c8xw2o3ovb6yu" path="res://assets/sprites/player/player_idle-Sheet.png" id="9_ryguw"]
[ext_resource type="Texture2D" uid="uid://bylsob7o6ool2" path="res://assets/sprites/player/player_up.png" id="10_d13ii"]
[ext_resource type="Texture2D" uid="uid://d211dmawe1pwm" path="res://assets/sprites/player/player-Sheet.png" id="11_1u8w0"]
[ext_resource type="Texture2D" uid="uid://deswwu522edyn" path="res://assets/sprites/jetpack_equipped.png" id="12_0odxb"]
[ext_resource type="AudioStream" uid="uid://ckls47eyc4kjw" path="res://assets/sounds/jetpack_ongoing.mp3" id="13_lswn8"]
[ext_resource type="Texture2D" uid="uid://c3muuo44pa2cr" path="res://assets/sprites/items/knife.png" id="14_a6jrf"]
[ext_resource type="AudioStream" uid="uid://ok4rado4jrra" path="res://assets/sounds/knife_swipe.mp3" id="15_xuqvo"]
[ext_resource type="Texture2D" uid="uid://ix0if6638lr2" path="res://assets/sprites/items/gun.png" id="16_qsp4k"]
[ext_resource type="AudioStream" uid="uid://i6rkm5hva566" path="res://assets/sounds/gunshot.mp3" id="17_kq58d"]
[ext_resource type="AudioStream" uid="uid://bjommsilf6dxh" path="res://assets/sounds/throw_rock.mp3" id="18_seu75"]
[ext_resource type="AudioStream" uid="uid://b3p18bgmjdncd" path="res://assets/sounds/game_over.mp3" id="23_d13ii"]
[ext_resource type="AudioStream" uid="uid://dh1hofwaapwxr" path="res://assets/sounds/win.mp3" id="24_1u8w0"]

[sub_resource type="LabelSettings" id="LabelSettings_0xm2m"]
font = ExtResource("1_ig7tw")
font_size = 51
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_getpj"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lquwl"]
gradient = SubResource("Gradient_getpj")

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6p2"]
atlas = ExtResource("8_getpj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("9_ryguw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("9_ryguw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebec5"]
atlas = ExtResource("9_ryguw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yllr7"]
atlas = ExtResource("9_ryguw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wodsf"]
atlas = ExtResource("10_d13ii")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjkh3"]
atlas = ExtResource("11_1u8w0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("11_1u8w0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_boad6"]
atlas = ExtResource("11_1u8w0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgyib"]
atlas = ExtResource("11_1u8w0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("11_1u8w0")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8t03j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb6p2")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebec5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yllr7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjkh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boad6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgyib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boad6"]
size = Vector2(32, 32)

[sub_resource type="Curve" id="Curve_g1dw6"]
_data = [Vector2(0.0113636, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0786518), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_yw30f"]
colors = PackedColorArray(0.74902, 0.223529, 0, 1, 0.447059, 0.368627, 0, 1)

[sub_resource type="Gradient" id="Gradient_kb6p2"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g6k8r"]
gradient = SubResource("Gradient_kb6p2")
fill_from = Vector2(0.53211, 1)
fill_to = Vector2(0.509174, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ieo8"]
size = Vector2(20, 7)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_074og"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_cegan"]
normal = Vector2(-1, 0)

[node name="Main" type="Node"]
script = ExtResource("1_cegan")
level_scene = ExtResource("2_82xsv")
win_scene = ExtResource("3_getpj")
lose_scene = ExtResource("4_ryguw")

[node name="TitleScreen" type="Node" parent="."]

[node name="TitleScreenUI" type="Control" parent="TitleScreen"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="TitleScreen/TitleScreenUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -357.5
offset_right = 357.5
offset_bottom = 405.0
grow_horizontal = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen/TitleScreenUI/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TitleScreen/TitleScreenUI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "INTO THE DEPTHS"
label_settings = SubResource("LabelSettings_0xm2m")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="TitleScreen/TitleScreenUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 445

[node name="HBoxContainer" type="HBoxContainer" parent="TitleScreen/TitleScreenUI/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StartButton" type="Button" parent="TitleScreen/TitleScreenUI/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 40
text = "START"

[node name="TitleLevel" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="TitleLevel"]
offset = Vector2(576, 324)
transform = Transform2D(1, 0, 0, 1, 576, 324)

[node name="ParallaxLayer" type="ParallaxLayer" parent="TitleLevel/ParallaxBackground"]
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(0, 648)

[node name="Sprite2D" type="Sprite2D" parent="TitleLevel/ParallaxBackground/ParallaxLayer"]
texture = ExtResource("2_h2yge")

[node name="CanvasModulate" type="CanvasModulate" parent="TitleLevel/ParallaxBackground/ParallaxLayer"]
script = ExtResource("3_1bvp3")
gradient = SubResource("GradientTexture1D_lquwl")

[node name="floor_bottom" parent="TitleLevel" instance=ExtResource("4_1bvp3")]
position = Vector2(577, 411)

[node name="Player" type="CharacterBody2D" parent="TitleLevel" groups=["player"]]
position = Vector2(578, 378)
collision_mask = 15
script = ExtResource("5_074og")
has_gun = true
rock_scene = ExtResource("6_cegan")
bullet_scene = ExtResource("7_82xsv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TitleLevel/Player"]
sprite_frames = SubResource("SpriteFrames_8t03j")
animation = &"up"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TitleLevel/Player" groups=["player"]]
shape = SubResource("RectangleShape2D_boad6")

[node name="JetpackEquipped" type="Sprite2D" parent="TitleLevel/Player"]
visible = false
position = Vector2(-21, 1)
texture = ExtResource("12_0odxb")

[node name="CPUParticles2D" type="CPUParticles2D" parent="TitleLevel/Player/JetpackEquipped"]
position = Vector2(0, 8)
amount = 30
lifetime = 0.2
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(1.7, 1)
spread = 0.0
scale_amount_min = 0.95
scale_amount_max = 1.8
scale_amount_curve = SubResource("Curve_g1dw6")
color_ramp = SubResource("Gradient_yw30f")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="TitleLevel/Player/JetpackEquipped"]
stream = ExtResource("13_lswn8")
parameters/looping = false

[node name="PointLight2D" type="PointLight2D" parent="TitleLevel/Player/JetpackEquipped"]
visible = false
position = Vector2(0, 19)
scale = Vector2(0.09375, 0.40625)
range_layer_min = -101
texture = SubResource("GradientTexture2D_g6k8r")

[node name="KnifeEquipped" type="Area2D" parent="TitleLevel/Player"]
visible = false
position = Vector2(21, 0)
collision_layer = 16
collision_mask = 24

[node name="Sprite2D" type="Sprite2D" parent="TitleLevel/Player/KnifeEquipped"]
texture = ExtResource("14_a6jrf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TitleLevel/Player/KnifeEquipped"]
shape = SubResource("RectangleShape2D_2ieo8")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="TitleLevel/Player/KnifeEquipped"]
stream = ExtResource("15_xuqvo")

[node name="GunEquipped" type="Sprite2D" parent="TitleLevel/Player"]
position = Vector2(21, 0)
texture = ExtResource("16_qsp4k")

[node name="Muzzle" type="Marker2D" parent="TitleLevel/Player/GunEquipped"]
position = Vector2(10, -4)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="TitleLevel/Player/GunEquipped"]
stream = ExtResource("17_kq58d")

[node name="ThrowRockSound" type="AudioStreamPlayer2D" parent="TitleLevel/Player"]
stream = ExtResource("18_seu75")
volume_db = -3.747

[node name="LeftBoundary" type="StaticBody2D" parent="TitleLevel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TitleLevel/LeftBoundary"]
shape = SubResource("WorldBoundaryShape2D_074og")

[node name="RightBoundary" type="StaticBody2D" parent="TitleLevel"]
position = Vector2(1152, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TitleLevel/RightBoundary"]
shape = SubResource("WorldBoundaryShape2D_cegan")

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_d13ii")

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_1u8w0")

[connection signal="pressed" from="TitleScreen/TitleScreenUI/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="body_entered" from="TitleLevel/Player/KnifeEquipped" to="TitleLevel/Player" method="_on_knife_equipped_body_entered"]
